# mmrrc-ingest

./: .copier-answers.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  download.yaml  justfile  mkdocs.yml  project.justfile  pyproject.toml
.github/workflows/: release.yaml
docs/: mmrrc.md
scripts/: generate-rdf.py  generate-report.py  get-latest-report.py  write_metadata.py
src/: __init__.py  allele_to_genotype.py  allele_to_genotype.yaml  genotype.yaml  genotype_to_phenotype.py  genotype_to_phenotype.yaml  genotypes.py  versions.py
src/mmrrc_ingest/: __init__.py  _version.py  allele_to_genotype.py  allele_to_genotype.yaml  cli.py  genotype.yaml  genotype_to_phenotype.py  genotype_to_phenotype.yaml  genotypes.py  preprocess.py  transform.py  transform.yaml
tests/: test_allele_to_genotype.py  test_genotype_to_phenotype.py  test_genotypes.py  test_transform.py
