[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "mmrrc-ingest"
description = "Monarch Initiative data ingest for MMRRC (Mutant Mouse Resource & Research Centers) - capturing allele to genotype associations, genotype nodes, and genotype to phenotype associations"
authors = [
  {name = "Monarch Initiative", email = "info@monarchinitiative.org"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "koza>=2.0.0",
  "biolink-model>=4.2.0",
  "kghub-downloader>=0.3.11",
  "duckdb>=0.10.2",
  "kozahub-metadata-schema",
  "requests>=2.28.0",
]

[tool.uv.sources]
kozahub-metadata-schema = { git = "https://github.com/monarch-initiative/kozahub-metadata-schema", rev = "main" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
